// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell snapshot tests base snapshot 1`] = `
<div>
  <div
    id="197"
    style="background-color: pink; width: 50px; height: 50px; border: 1px solid black;"
  >
    <div
      style="text-align: center; position: relative; top: 30%;"
    />
  </div>
</div>
`;

exports[`Cell snapshot tests some data snapshot 1`] = `
<div>
  <div
    id="0"
    style="background-color: pink; width: 5px; height: 5px; border: 1px solid black;"
  >
    <div
      style="text-align: center; position: relative; top: 30%;"
    >
      0
    </div>
  </div>
</div>
`;
